--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -4,6 +4,10 @@ set(PROJECT_SOURCES
     src/main.cpp
     src/mainwindow.cpp
     src/mainwindow.h
+    src/mainView/mainview.h
+    src/mainView/mainview.cpp
+    src/gameScene/gamescene.h
+    src/gameScene/gamescene.cpp
 )
 
 add_executable(${PROJECT_NAME}
