Add model players

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -38,6 +38,9 @@ set(PROJECT_SOURCES
     src/gameScene/items/players/player/player.cpp
     src/gameScene/items/players/dealer/dealer.h
     src/gameScene/items/players/dealer/dealer.cpp
+    src/model/items/players/iplayer.h
+    src/model/items/players/player/player.h
+    src/model/items/players/player/player.cpp
 )
 
 add_executable(${PROJECT_NAME}
