Feat/user and dealer
* Add scene players

* Add model players

* Change minimum window size

* Feat/hit button

* Refactor players creation

* Add cards for player

* Delete players borders

* Add cards for model player

* Add point labels for players

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -33,6 +33,14 @@ set(PROJECT_SOURCES
     src/gameScene/items/labels/ilabel.h
     src/gameScene/items/labels/pointLabel/pointlabel.h
     src/gameScene/items/labels/pointLabel/pointlabel.cpp
+    src/gameScene/items/players/iplayer.h
+    src/gameScene/items/players/player/player.h
+    src/gameScene/items/players/player/player.cpp
+    src/gameScene/items/players/dealer/dealer.h
+    src/gameScene/items/players/dealer/dealer.cpp
+    src/model/items/players/iplayer.h
+    src/model/items/players/player/player.h
+    src/model/items/players/player/player.cpp
 )
 
 add_executable(${PROJECT_NAME}
