Add class for card animation

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -41,6 +41,8 @@ set(PROJECT_SOURCES
     src/model/items/players/iplayer.h
     src/model/items/players/player/player.h
     src/model/items/players/player/player.cpp
+    src/gameScene/animations/cardAnimator/cardAnimator.h
+    src/gameScene/animations/cardAnimator/cardAnimator.cpp
 )
 
 add_executable(${PROJECT_NAME}
